A bunch of stuff.

--- a/journal/entries/15-1-24.md
+++ b/journal/entries/15-1-24.md
@@ -15,7 +15,7 @@ just under 28 Earth hours, which makes it just 15% longer than an Earth day.
 That's close enough that I think humans could adapt to it without problems. Days
 are divided into ten hours, additionally I divide the day up into 4 shifts.
 Each shift is 2.5 Space hours (about 7 hours).  Crew members will generally work
-a double shift and then have two shifts for self care (relaxation, hygiene,
+a double shift and then have two shifts for personal time (relaxation, hygiene,
 entertainment, etc.) and sleep.
 
 | Seconds       | Space Time     | Earth Time         |
