New UI stuff.  Tabbed card, columnated card

--- a/journal/entries/15-1-50.md
+++ b/journal/entries/15-1-50.md
@@ -12,4 +12,4 @@ The game is about a space ship.  It's not about the captain or the crew or the p
 
 These are all based on some form of "room ship" (their words for space all have the same root as the English word 'room').  None of those words are actually available, but I could use some amalgamation like romshift, ramskiff, or raumskip.  It would be a word that could be 'space ship' in a language that is related to these languages, but isn't actually a word in any real language.  It could be made easy for English speakers to spell even if they aren't going to recognize it as meaning anything.
 
-Another option I like a is 'safina'.  It's a transliteration of the Arabic word for ship.  It's a pretty word.  I'd have to use some variant of it, because I am stuck with URLs that are actually available.  I could add a silent 't' or 'h' to the end.  I could use a 'ph' instead of 'f', I could use a double 'f' or a double 'i'.  All of those make it a little less pretty and a little harder to spell.  Safiina.
+Another option I like a is 'safina'.  It's a transliteration of the Arabic word for ship.  It's a pretty word.  I'd have to use some variant of it, because I am stuck with URLs that are actually available.  I could add a silent 't' or 'h' to the end.  I could use a 'ph' instead of 'f', I could use a double 'f' or a double 'i'.  All of those make it a little less pretty and a little harder to spell.  For now, I'm running with Safiina.
