--- a/journal/entries/15-3-12.md
+++ b/journal/entries/15-3-12.md
@@ -1,5 +1,5 @@
 ## The Login Prompt
 
-A friend of mine tried to check out my game, but they saw the loging screen and decided didn't go any further.  It seems like the login prompt is more trouble than it's worth.  It impedes my efforts to show the game to people.  So far, the only reason people load my game is because I ask them to.  I say, "Hey, look at what I made!" and people do me favor by checking it out.  It should be easier for people.
+A friend of mine tried to check out my game, but they saw the login screen and decided didn't go any further.  It seems like the login prompt is more trouble than it's worth.  It impedes my efforts to show the game to people.  So far, the only reason people load my game is because I ask them to.  I say, "Hey, look at what I made!" and people do me favor by checking it out.  It should be easier for people.
 
 I still need a user account to save the game, but most users aren't going to want to save.  There not enough game to play to make anyone want to save their progress.  I can just pop up the login form if a user clicks the save button.
