--- a/journal/entries/15-3-53.md
+++ b/journal/entries/15-3-53.md
@@ -24,7 +24,9 @@ Both of these games will put you in a downward spiral if you run out of somethin
 
 This is one of those "one more turn" games, but without actually being turn based.  You never want to quit playing because there is always something that's about to happen.  Ship that are about to arrive, a building is about to finish, or a research is going to get done.  There's always something.  Research enable better ways to generate minerals and you can use minerals to speed your research.  Where Stellaris really shines, though, is in the stories it tells.  Run away imperialism.  Societies made of multiple alien species.  Clashes of great space navies.  Archeology to uncover the secrets of long extinct alien races.  The roles of religion, biological modification, and artificial intelligence in high tech societies.  There's a lot going on, thematically.
 
-As I see it, none of these games have a single, core mechanic.  The games only work with the combination off lots of systems.  They have two or more systems that reinforce each other in a positive feedback loop, but growth is limited by some sort of diminishing returns.  My conclusion is that there is no single mechanic I can add to make the game fun.  It's also not going to work to just add systems until something interesting happens.  The interplay and advancement of systems needs to be carefully thought out.  I'm pretty confident that trading and interplanetary travel are going to part of the final game, so I might as well add them.  It will give me more fertile ground for developing further systems.
+### Conclusion
 
-There was an interview with Toady One, the creator of Dwarf Fortress.  He described how he will start with a story that he want to be possible in the game.  Then he will add mechanics so that stories like that will be possible.  Sadly, he didn't give an example.  I think I need to start thinking of stories that I want to show up my game.  Terraforming Venus might be a good place to start.
+As I see it, none of these games have a single, core mechanic.  The games only work with the combination off lots of systems.  They have two or more systems that reinforce each other in a positive feedback loop, but growth is limited by some sort of diminishing returns.  My conclusion is that there is no single mechanic I can add to make the game fun.  It's also not going to work to just add systems until something interesting happens.  The interplay and advancement of systems needs to be carefully thought out.  I'm pretty confident that trading and interplanetary travel are going to part of the final game, so I might as well add them.  It will give me more fertile ground for developing further systems.  I'm going to go ahead and dive into trading.
+
+There was an interview with Toady One, the creator of Dwarf Fortress.  He described how he creates new features within the game.  He will start with a story that he want to be possible in the game.  Then he will add mechanics so that stories like that will be possible.  Sadly, he didn't give an example.  I think I need to start thinking of stories that I want to show up my game.  Terraforming Venus might be a good place to start.
 
