--- a/journal/entries/15-2-99.md
+++ b/journal/entries/15-2-99.md
@@ -5,8 +5,8 @@ I'm giving Visual Studio Code a second shot.  I got ftp-sync to work for me, tho
 These are my complaints:
 
 - There's no easy way to delete a file on the server, you delete the file locally then sync local-to-remote.  There's no feedback that you've actually done it, you have to check the server
-- When errors occure, a little pop up appears in the bottom. It has no useful information has to be clicked on to go away
-- The output window prints some things, but not useful information.  I'd like to see which files are synced, in which direction, and wether the sync was successful.
-- If an error ever occurs (which is inevitable because file transfers of the internet fail somtimes), a notice of the failure shows up at the bottom of the program and stays there.  It's just annoying.
+- When errors occur, a little pop up appears in the bottom. It has no useful information has to be clicked on to go away
+- The output window prints some things, but not useful information.  I'd like to see which files are synced, in which direction, and whether the sync was successful.
+- If an error ever occurs (which is inevitable because file transfers of the internet fail sometimes), a notice of the failure shows up at the bottom of the program and stays there.  It's just annoying.
 
 There's a few more FTP extensions.  Is it worth my time to evaluate those?  After all, ftp-sync is working.
