Improvements to economy.

--- a/journal/entries/15-3-53.md
+++ b/journal/entries/15-3-53.md
@@ -14,7 +14,7 @@ Then there's the raids.  You want more weapons and soldiers so you can defend yo
 
 ### *Factorio*
 
-Factorio is all about automation.  The big loop is to automate processes to get materials to automate more processes to get even more materials.  The satisfaction comes from designing and setting up a system and that watching it work.  The pieces you have to work with are robust and varied enough that you can set up complicated systems.  I spend most of my time in Factorio watching my factory and making little tweaks.
+Factorio is all about automation.  The big loop is to automate processes to get materials to automate more processes to get even more materials.  The satisfaction comes from designing and setting up a system and than watching it work.  The pieces you have to work with are robust and varied enough that you can set up complicated systems.  I spend most of my time in Factorio watching my factory and making little tweaks.
 
 ### *Surviving Mars* and *Banished*
 
