Prices API, new goods in economy.

--- a/journal/entries/15-3-67.md
+++ b/journal/entries/15-3-67.md
@@ -1,3 +1,3 @@
 ## The Vestian Calendar
 
-One space year is about 1157 Earth days.  If something had a circular orbit around the sun, it's orbit would be in the asteroid belt.  Naturally, I wanted to find out which asteroid had a year exactly equal to a space year.  Of the 50 largest asteroids, I was disappointed to find that all of them orbit the sun too slowly.  The major asteroid with the orbit closest to a space year turned out to be one of the most major asteroid, Vesta.  Based on that, I want to call my space calendar the Vestian Calendar.  That would make one of my vestian year 15% shorter than a year on Vesta, which you would also want to call a vestian year.  This is extremely confusing.  Still I'd rather talk about how vestian days than space days.
+One space year is about 1157 Earth days.  If something had a circular orbit around the sun with a period of that length, it's orbit would be in the asteroid belt.  Naturally, I wanted to find out which asteroid had a year exactly equal to a space year.  Of the 50 largest asteroids, I was disappointed to find that all of them orbit the sun too slowly.  The major asteroid with the orbit closest to a space year turned out to be one of the largest asteroids, Vesta.  Based on that, I want to call my space calendar the Vestian Calendar.  That would make one of my vestian years 15% shorter than a year on Vesta, which you would also want to call a vestian year.  This is extremely confusing.  Still I'd rather talk about how vestian days than space days.
