--- a/journal/entries/15-3-79.md
+++ b/journal/entries/15-3-79.md
@@ -2,12 +2,12 @@
 
 I ported my old economy simulator to python and added it to this project.  This is one of my least practical design decisions, and I want to talk about it.
 
-It was always part of the plan to use the simulator on the backend, even when I started the simulator back in Space Year 13.  It individually simulates thousands of citizens who manufacture, buy, and sell all goods.  Each citizen has their own stats and preferences so what each citizen wants to make and own is different.  Prices emerge as an equilibrium of supply and demand.  I always intended the simulator to be the backend of a computer game's economy.  I wanted players to buy from and sell to the citizens in the simulation directly.  
+It was always part of the plan to use the simulator on the backend, even when I started the simulator back in vestian year 13.  It individually simulates thousands of citizens who manufacture, buy, and sell all goods.  Each citizen has their own stats and preferences so what each citizen wants to make and own is different.  Prices emerge as an equilibrium of supply and demand.  I always intended the simulator to be the backend of a computer game's economy.  I wanted players to buy from and sell to the citizens in the simulation directly.  
 
 I'm now thinking it will play a more passive role.  The game client will download prices from the simulator.  In that way, it serves as a pseudorandom number generator.  When the player makes trades within their own game, those trades will be submitted to the simulator.  The simulator will eventually incorporate them.  This is the asynchronous multiplayer aspect to my game.  For example, When a lot of players are bringing food to Mars, the price of food on Mars should drop and that will be seen by all players.
 
 There are some problems.
- * It doesn't scale well.  Even if we ignore bandwidth problem of all trades needing to be handled by a single server.  A small number of players will never see their impact.  A large number of player will overwhelm the citizens and essentially completely control the economy.
+ * It doesn't scale well.  Even if we ignore bandwidth problem of all trades needing to be handled by a single server.  A small number of players will never see their impact on the economy.  A large number of player will overwhelm the citizens and essentially completely control the economy.  It might be impossible to balance.
  * It's way too complicated.  Players will never really know that such a detailed simulation is at play, and much simpler simulation would work just fine.  A simpler simulation might work better.
  * I still can't get food to work.  Since the very beginning, food has been problematic.  The simulation swings wildly from huge surplus to huge deficit of food.  It doesn't do this with any other good.  Unless food is in the simulation, then all goods are affected.
 
