Shuttle! Basic animation, no logic. :(

--- a/journal/entries/15-4-93.md
+++ b/journal/entries/15-4-93.md
@@ -16,7 +16,7 @@ Object.defineProperty(Object.prototype, "watch", {
     }
     var old_set = descriptor.set;
     var old_get = descriptor.get;
-    var old_value = descriptor.value;
+    var old_value = this[property];
 
     delete descriptor.writable;
     delete descriptor.value;
@@ -25,8 +25,8 @@ Object.defineProperty(Object.prototype, "watch", {
 
     descriptor.set = function (value) {
       this[property_alias] = value;
-      callback(value);
       if (old_set) old_set(value);
+      callback(value);
     };
 
     if (old_get) {
