--- a/journal/entries/15-6-09.md
+++ b/journal/entries/15-6-09.md
@@ -4,7 +4,7 @@ I played *Objects in Space*, it's awesome.  It's a little clunky.  I turned off 
 
 This one time, the communication console beeped, I click on it at see I'm being hailed, the sender's name appears, but I don't recognize it.  It's not a trading port.  I check the radar and I can't see them.  The long range radar has blind spots, so I spin my ship to try to do a sweep.  There's the ship whose name matches the hail coming towards me.  I accept the hail.  They start threatening me and demanding I drop my cargo or they'll shoot.
 
-I'm carrying like 90 credits worth of hydrogen. It's worthless.  I'd gladly jettison it. Before I can figure out the controls for the cargo bay, the radar console beeps and there's a torpedo coming towards me.  I jump over to the navigation controls and spin around and fire up the main engine, but the torpedo and the pirate are gone from my radar. They're in my blind spot again.  I'm about to try a quick spin to check on them when the torpedo shows up in my short range radar. It's still gaining on me.  I perform a last minute 90 degree turn, and the torpedo flies right by me and disappears.  I was left to figure out how far off course I was and what to do about it.  It was so slow and tense, and it was a lot of fun.
+I'm carrying like 90 credits worth of hydrogen. Not very much.  I'd gladly jettison it. Before I can figure out the controls for the cargo bay, the radar console beeps and there's a torpedo coming towards me.  I jump over to the navigation controls and spin around and fire up the main engine, but the torpedo and the pirate are gone from my radar. They're in my blind spot again.  I'm about to try a quick spin to check on them when the torpedo shows up in my short range radar. It's still gaining on me.  I perform a last minute 90 degree turn, and the torpedo flies right by me and disappears.  I was left to figure out how far off course I was and what to do about it.  It was so slow and tense, and it was a lot of fun.
 
 I love the drama introduced by the limited access to information, and the reduced set of actions.  It made me want to buy some sort of anti-torpedo tech.  I don't know what's available in *Objects in Space*. Chaff? Flares? Point defense?  They've got to have something.
 
